from 2.5.1 to 2.5.2
- fixing bug met in rare situation while reading in sequential-read mode
  an archive encrypted using gnupg encryption. In that situation libdar
  may fail reading the archive (but succeeds in normal read mode) issuing
  an obscure message (message has also been fixed).

from 2.5.0 to 2.5.1
- fixed display bug in dar_manager met when using -o option and adding
  options for dar that does not exist for dar_manager (like -R option)
- reactivating disabled (by mistake) optimization for some read-only dar
  manager database operations
- fixing compilation issue with dar against gcc 4.9.2
- fixing syntax error in dar_manager message
- fixed bug that forbade dar_manager to write down modified database
  when only database header was modified (-o, -b, -p switches).
- adding dar_manager database format version information with -l option
- fixed libdar inability to read dar_manager's database format version 4
- adapting code to build under cygwin environment, where thread_local seems
  broken
- fixed output to stderr in place of stdout for Licensing information
- fixed bug met when permission is denied while reading or writing slices
- fixing bug that avoided creating an archive at the root of the filesystem

from 2.4.x to 2.5.0
- added support for posix_fadvise()
- added entrepot class hierarchy to support in the future other storage
  types than local filesystem for slices
- API: added access to the entrepot through the API
- modified class hash_fichier for it becomes entrepot independent
- API: extended libdar API with an additional and more simple way to read
  an archive: archive::get_children_in_table() method, see
  doc/API_tutorial.html for details
- added support for extX (see lsattr(1)) and HFS+ (birthtime date)
  Filesystem Specific Attributes (FSA).
- dar is now able to skip backward when a file is found to be "dirty" at
  backup time. This avoids wasting space in archive but is only possible if